# devtools-init

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  setup_github.sh  verify_setup.py
.github/workflows/: ci.yml
devtools_init/: __init__.py
