[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtools-init"
version = "2.0.0"
description = "QuickHooks - Automated git hooks manager for Python projects"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
keywords = ["git", "hooks", "pre-commit", "code-quality", "automation", "quickhooks"]
authors = [
    {name = "Dev Team", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/MarcMPR/devtools-init"
Repository = "https://github.com/MarcMPR/devtools-init.git"
Issues = "https://github.com/MarcMPR/devtools-init/issues"
Documentation = "https://github.com/MarcMPR/devtools-init#readme"
